--- a/client/src/pages/login/Login.css
+++ b/client/src/pages/login/Login.css
@@ -41,6 +41,11 @@
   padding: 10px;
 }
 
+.loginButton:disabled {
+  cursor: not-allowed;
+  border-color: coral;
+}
+
 .loginRegisterButton {
   position: absolute;
   top: 60px;
